tests/baselines/reference/contextuallyTypingOrOperator(strict=true).errors.txt
contextuallyTypingOrOperator.ts(3,47): error TS7006: Parameter 's' implicitly has an 'any' type.


==== contextuallyTypingOrOperator.ts (1 errors) ====
    var v: { a: (_: string) => number } = { a: s => s.length } || { a: s => 1 };
    
    var v2 = (s: string) => s.length || function (s) { s.length };
                                                  ~
!!! error TS7006: Parameter 's' implicitly has an 'any' type.
    
    var v3 = (s: string) => s.length || function (s: number) { return 1 };
    var v4 = (s: number) => 1 || function (s: string) { return s.length };